--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -393,15 +393,17 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
 }*/
 
 /* Gallery */
+/* BOOKMARK change bottom margin to control spacing between rows */
 .grid-item {
-	margin-bottom: 20px;
+	margin-top: 50px;
+	margin-bottom: -20px;
 	padding-left: 1px;
 	padding-right: 1px;
 	float: left;
 	width: 100%;
 }
 
-.grid-item:last-child { margin-bottom: 0; }
+.grid-item:last-child { margin-bottom: -50; }
 
 .tm-img-gallery-container {
 	max-width: 320px;
@@ -503,7 +505,7 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
 }
 
 figure.effect-bubba {
-    background-color: #9e5406;
+    background-color: #000000;
 }
 
 .cd-hero-slider .selected .cd-full-width figure.effect-bubba h2.tm-figure-title {
@@ -534,6 +536,7 @@ figure.effect-bubba p {
 	transform: translate3d(0,20px,0);
 }
 
+/*BOOKMARK lowering this makes images darker when moused over}*/
 figure.effect-bubba:hover img {
     opacity: 0.4;
 }
@@ -596,11 +599,12 @@ figure.effect-bubba:hover p {
 	transform: translate3d(0,0,0);
 }*/
 
+/*BOOKMARK opacity here is before images are moused over*/
 .grid-item figure img {
     position: relative;
     display: block;
     max-width: 100%;
-    opacity: 0.8;
+    opacity: 1;
 }
 
 .cd-hero-slider h2 { font-size: 1.5em; }
