--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -135,7 +135,7 @@ button:focus { outline: none; }
 	list-style: none; 
 }
 
-/* Background & menu colors */
+/* BOOKMARK Background & menu colors */
 .cd-hero-slider li:nth-of-type(1) { background-color: rgba(56, 182, 230, 0.62); }
 .cd-hero-slider li:nth-of-type(2) { background-color: rgba(237, 84, 76, 0.62); }
 .cd-hero-slider li:nth-of-type(3) { background-color: rgba(234, 163, 25, 0.62); }
@@ -402,6 +402,8 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
 	float: left;
 	width: 100%;
 }
+
+.grid-item:first-child { margin-top: 50; }
 
 .grid-item:last-child { margin-bottom: -50; }
 
