added all the images (not in this repository), added another html page

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -644,6 +644,7 @@ figure.effect-bubba:hover p {
 
 /*.tm-pad-t { padding-top: 40px; }*/
 .tm-white-box-margin-b { margin-bottom: 30px; }
+.grid-item { min-width: 340px; }
 .grid-item { max-width: 340px; }
 /*.tm-img-gallery-container-2 { max-width: 453px; }*/
 .tm-gallery-title span { width: 100%; }
